Clean out some unnecessary pages

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: 추승우
-description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
+title: Kevin's
+description: Kevin's personal home page
 
 gems: ['jekyll-multiple-languages']
 languages: ['ko', 'en']
