Add some links to footer

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,8 @@ social:
    github: kswchoo
    twitter: kswchoo
    facebook: kswchoo
-   email: choo@sungwoo.me
+   openflights: kswchoo
+   instagram: kswchoo
 
 navigation:
     - title: 연락하기
